--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="dialog_margin">16dp</dimen>
     <dimen name="canvas_margin">24dp</dimen>
     <dimen name="canvas_elevation">8dp</dimen>
+    <dimen name="logo_margin">16dp</dimen>
 </resources>
